--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ before_script:
   - export PATH=$PATH:${ANDROID_CMDTOOLS}:${ANDROID_HOME}
 #  - commandlinetools/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME}
   - yes | commandlinetools/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} --version
-  - commandlinetools/tools/bin/sdkmanager --update
+#  - commandlinetools/tools/bin/sdkmanager --update
   - commandlinetools/tools/bin/sdkmanager "platform-tools" "platforms;android-#{ANDROID_COMPILE_SDK}"
   - echo y | commandlinetools/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
   - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
