--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,19 +10,14 @@ before_script:
   - apt-get --quiet install --yes wget tar unzip lib32stdc++6 lib32z1
 #  - wget --quiet --output-document=android-sdk.zip https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip
   - wget --quiet --output-document=commandlinetools.zip https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_TOOLS}.zip
-  - mkdir android-sdk-linux
+#  - mkdir android-sdk-linux
   - export REPO_OS_OVERRIDE="linux"
-  - unzip -d commandlinetools commandlinetools.zip
-  - export ANDROID_CMDTOOLS=$PWD/commandlinetools/tools/bin
+  - unzip -d android-sdk-linux commandlinetools.zip
+#  - export ANDROID_CMDTOOLS=$PWD/commandlinetools/tools/bin
   - export ANDROID_HOME=$PWD/android-sdk-linux
-  - export PATH=$PATH:${ANDROID_CMDTOOLS}:${ANDROID_HOME}
-  - commandlinetools/tools/bin/sdkmanager "platform-tools" --sdk_root=${ANDROID_HOME}
-  - commandlinetools/tools/bin/sdkmanager --update
-#  - commandlinetools/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME}
-#  - yes | commandlinetools/tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} --version
-  - echo yes
-  - echo y | commandlinetools/tools/bin/sdkmanager "platform-tools" "platforms;android-#{ANDROID_COMPILE_SDK}" >/dev/null
-  - echo y | commandlinetools/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" >/dev/null
+#  - export PATH=$PATH:${ANDROID_CMDTOOLS}:${ANDROID_HOME}
+  - echo y | android-sdk-linux/tools/bin/sdkmanager "platform-tools"  "platforms;android-#{ANDROID_COMPILE_SDK}" --sdk_root=${ANDROID_HOME}
+  - echo y | android-sdk-linux/tools/bin/sdkmanager "build-tools;${ANDROID_BUILD_TOOLS}" --sdk_root=${ANDROID_HOME}
   - export PATH=$PATH:$PWD/android-sdk-linux/platform-tools/
   - chmod +x ./gradlew
   # temporarily disable checking for EPIPE error and use yes to accept all licenses
