--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ buildscript {
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
 //        classpath 'com.tencent.bugly:symtabfileuploader:1.3.7'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
     }
 }
 
