remove release note
Signed-off-by: HawksJamesf <Hawks.Jamesf@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,7 @@ android {
                 mappingFileUploadEnabled false
             }
             firebaseAppDistribution {
-                releaseNotesFile="/path/to/releasenotes.txt"
+//                releaseNotesFile="/path/to/releasenotes.txt"
                 testers="hawksjamesf@gmail.com"
                 serviceCredentialsFile="${projectDir}/spacecraft-22dc1-e7362822612d.json"
             }
