--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
@@ -73,12 +73,29 @@
 
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SplashActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/FullscreenTheme">
+            <!--            launcher启动 start-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!--            launcher启动 end -->
+            <!--            浏览器启动 start-->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="hj"></data>
+            </intent-filter>
+            <!--            浏览器启动 end-->
+            <!--            firebase app indexing启动 start-->
+            <!--            firebase app indexing启动 end-->
+
         </activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SetupWizardActivity"
