--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,8 +108,10 @@ android {
         buildConfigField('String', 'BUGLY_APP_KEY', '"a15ecf84-1786-40c6-abf5-fe975fce22e6"')
         buildConfigField('String', 'XIAOMI_APP_ID', '"2882303761517994447"')
         buildConfigField('String', 'XIAOMI_APP_KEY', '"5921799441447"')
+        buildConfigField('String', 'AMAP_KEY', '"84198333a8ab4404cd35829dbb4ec435"')
         manifestPlaceholders = [
                 'BUGLY_APP_ID': '3d62251014', 'BUGLY_APP_KEY': 'a15ecf84-1786-40c6-abf5-fe975fce22e6', "BUGLY_APP_VERSION": "${rootProject.ext.versionName}",
+                'AMAP_KEY': '84198333a8ab4404cd35829dbb4ec435',
         ]
 
         //lower 5.x
