补充高德定位代码
Signed-off-by: HawksJamesf <Hawks.Jamesf@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,7 +163,7 @@ android {
                     'QQ_KEY'            : 'adf', 'WEXIN_KEY': 'adfaf',
                     'BUGLY_ENABLE_DEBUG': 'true'
             ]
-//            signingConfig signingConfigs.debugSigningConfig
+            signingConfig signingConfigs.debugSigningConfig
             ext.alwaysUpdateBuildId = false
             ext.enableCrashlytics = false
             firebaseCrashlytics {
