convert IntentService to Service

--- a/map/src/main/AndroidManifest.xml
+++ b/map/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         </activity>
         <service
             android:foregroundServiceType="location"
-            android:name=".service.LbsIntentServices"
+            android:name=".service.LbsServices"
             />
         <service
             android:foregroundServiceType="location"
