[feat] vedio component
Signed-off-by: HawksJamesf <Hawks.Jamesf@gmail.com>

--- a/av/src/main/AndroidManifest.xml
+++ b/av/src/main/AndroidManifest.xml
@@ -1,2 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hawksjamesf.av" />
+    package="com.hawksjamesf.av">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <application>
+        <activity android:name=".RecoderActivity" />
+        <service
+            android:foregroundServiceType="mediaProjection"
+            android:name=".RecoderService"
+            />
+        <activity
+            android:name="com.hawksjamesf.av.VideoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:supportsPictureInPicture="true"
+            />
+<!--            android:theme="@style/VideoTheme" -->
+    </application>
+</manifest>
