--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -5,7 +5,6 @@ apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/testlib.gradle
 
 def srcDirs = [
         "carousel",
-        "video",
         "colorpicker",
         "drawable",
         "animationsExprimental",
@@ -83,6 +82,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':common')
+    api project(path: ':av')
 //    implementation project(path: ':image')
     /**
      * ================================ui start=====================================
