--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,8 +76,8 @@
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.SplashActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@style/FullscreenTheme"
+            android:windowSoftInputMode="adjustPan">
             <!--            launcher启动 start-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -92,8 +92,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="https" android:host="i.cjf.com" android:path="/home"/>
-                <data android:scheme="cjf" android:host="www.cjf.com" android:path="/home"/>
+                <data
+                    android:host="i.cjf.com"
+                    android:path="/home"
+                    android:scheme="https" />
+                <data
+                    android:host="www.cjf.com"
+                    android:path="/home"
+                    android:scheme="cjf" />
             </intent-filter>
             <!--            浏览器启动 end-->
             <!--            firebase app indexing启动 start-->
@@ -131,14 +137,17 @@
         <activity android:name="com.example.background.SelectImageActivity" />
         <activity android:name="com.example.background.FilterActivity" />
         <activity android:name=".vm.MVVMActivity" />
-        <activity android:name=".WebViewActivity" >
+        <activity android:name=".WebViewActivity">
             <intent-filter android:autoVerify="true">
-            <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
 
-            <data android:scheme="cjf" android:host="www.cjf.com" android:path="/web"/>
+                <data
+                    android:host="www.cjf.com"
+                    android:path="/web"
+                    android:scheme="cjf" />
             </intent-filter>
         </activity>
     </application>
