--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,32 @@
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.MainActivity"
             android:label="@string/title_activity_main"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop" >
+            <!--            浏览器启动 start-->
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="i.spacecraft.com"
+                    android:path="/home"
+                    android:scheme="https" />
+                <data
+                    android:host="www.spacecraft.com"
+                    android:path="/home"
+                    android:scheme="ispacecraft" />
+                <data
+                    android:host="i.spacecraft.com"
+                    android:pathPrefix="/c/"
+                    android:scheme="https" />
+            </intent-filter>
+            <!--            浏览器启动 end-->
+            <!--            firebase app indexing启动 start-->
+            <!--            firebase app indexing启动 end-->
+
+        </activity>
         <activity
             android:name="com.hawksjamesf.spacecraft.ui.home.HomeActivity"
             android:launchMode="singleTop"
@@ -85,25 +110,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!--            launcher启动 end -->
-            <!--            浏览器启动 start-->
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="i.cjf.com"
-                    android:path="/home"
-                    android:scheme="https" />
-                <data
-                    android:host="www.cjf.com"
-                    android:path="/home"
-                    android:scheme="cjf" />
-            </intent-filter>
-            <!--            浏览器启动 end-->
-            <!--            firebase app indexing启动 start-->
-            <!--            firebase app indexing启动 end-->
 
         </activity>
         <activity
@@ -145,9 +151,13 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="www.cjf.com"
+                    android:host="www.spacecraft.com"
                     android:path="/web"
-                    android:scheme="cjf" />
+                    android:scheme="ispacecraft" />
+                <data
+                    android:host="www.spacecraft.com"
+                    android:path="/web/"
+                    android:scheme="ispacecraft" />
             </intent-filter>
         </activity>
     </application>
