--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,4 @@ isComponentMode=false
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.debug.obsoleteApi=true
 -Djavax.net.ssl.trustStore=/path/to/truststore -Djavax.net.ssl.trustStorePassword=password
+android.injected.testOnly=false
