--- a/uicomponent/build.gradle
+++ b/uicomponent/build.gradle
@@ -81,7 +81,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api project(path: ':common')
+    implementation project(path: ':common')
     api project(path: ':av')
 //    implementation project(path: ':image')
     /**
