--- a/instrumentation/processor/build.gradle
+++ b/instrumentation/processor/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.squareup:javapoet:1.10.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
-    implementation project(path: ':annotations')
+    implementation project(path: ':instrumentation:annotations')
     implementation 'com.squareup:kotlinpoet:1.0.0'
     implementation 'junit:junit:4.13-beta-3'
     implementation 'com.google.auto.service:auto-service:1.0-rc4'
