--- a/app/build.gradle
+++ b/app/build.gradle
@@ -327,15 +327,15 @@ configurations {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(path: ':map')
+//    implementation project(path: ':map')
 //    implementation project(path: ':chatroom')
     implementation project(path: ':network')
-    implementation project(path: ':storage')
+//    implementation project(path: ':storage')
     implementation project(path: ':uicomponent')
     implementation project(path: ':common')
-    implementation project(path: ':login')
-    implementation project(path: ':image')
-    implementation project(path: ':ypose')
+//    implementation project(path: ':login')
+//    implementation project(path: ':image')
+//    implementation project(path: ':ypose')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
