--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 //    implementation files('libs\\buglySymbolAndroid2.3.1.jar')
 //    implementation "org.javassist:javassist:3.20.0-GA"
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    implementation group: 'org.ow2.asm', name: 'asm', version: '5.1'
+//    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '5.1'
 }
 repositories {
     mavenLocal()
