--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0'
         classpath 'com.google.firebase:perf-plugin:1.3.1'
-        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
+//        classpath 'com.hawksjamesf.plugin:perf:1.0.0'
 //        classpath 'com.google.firebase:firebase-plugins:1.1.5'
         classpath("com.tencent.matrix:matrix-gradle-plugin:0.6.0") { changing = true }
 //        classpath 'com.tencent.bugly:symtabfileuploader:1.3.7'
