--- a/components/myhome/src/main/AndroidManifest.xml
+++ b/components/myhome/src/main/AndroidManifest.xml
@@ -80,16 +80,14 @@
             </intent-filter>
         </activity>
 
-
-
-<!--        <provider-->
-<!--            android:name="androidx.work.impl.WorkManagerInitializer"-->
-<!--            android:authorities="${applicationId}.workmanager-init"-->
-<!--            android:directBootAware="false"-->
-<!--            android:exported="false"-->
-<!--            android:multiprocess="true"-->
-<!--            tools:node="remove"-->
-<!--            tools:targetApi="n" />-->
+        <provider
+            android:name="androidx.work.impl.WorkManagerInitializer"
+            android:authorities="${applicationId}.workmanager-init"
+            android:directBootAware="false"
+            android:exported="false"
+            android:multiprocess="true"
+            tools:node="remove"
+            tools:targetApi="n" />
     </application>
 
 </manifest>
